--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<ul>
+  <li *ngFor="let pais of paises">
+    {{pais.name}} --- {{pais.population | number}}
+
+  </li>
+</ul>
