creando componente tarjetas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
   </li>
 </ul> -->
 
-
+<!-- 
 <div class="card-columns">
   <div  *ngFor="let cancion of nuevasCanciones" class="card">
     <img class="card-img-top" [src]="cancion.images | noimage" alt="Card image cap">
@@ -16,4 +16,5 @@
       </p>
     </div>
   </div>
-</div>
+</div> -->
+<app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
