--- a/src/styles.css
+++ b/src/styles.css
@@ -65,3 +65,10 @@ hr {
 .fadeIn {
     animation-name: fadeIn;
 }
+.card-columns .card:hover{
+    transition: transform .25s;
+    transform: scale(1.2);
+    position: relative;
+    z-index: 1;
+
+}
