--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
 
-<div class="card-columns  ">
+<div class="card-columns m-5  ">
   <div  *ngFor="let item of items" class="card">
     <img class="card-img-top" [src]="item.images | noimage" alt="Card image cap">
     <div class="card-body">
