--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,4 +17,5 @@
     </div>
   </div>
 </div> -->
+<app-loading *ngIf="loading"></app-loading>
 <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
