--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col">
     <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Search an artist">
@@ -13,4 +14,5 @@
     </div>
   </div>
 </div> -->
-<app-tarjetas [items]="artistas"></app-tarjetas>
+<app-loading *ngIf="loading" class="m-5"></app-loading>
+<app-tarjetas *ngIf="!loading" [items]="artistas"></app-tarjetas>
