Getting an artist

--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,3 +1,20 @@
-<p>
-  artista works!
-</p>
+<app-loading *ngIf="loadingArtist"></app-loading>
+
+<div class="row animated fadeIn" *ngIf="!loadingArtist">
+  <div class="col-2">
+    <img [src]="artista.images | noimage" class="img-thumbnail img-circle">
+  </div>
+  <div class="col">
+    <h3>{{ artista.name}}</h3>
+    <p>
+      <a [href]="artista.external_urls.spotify" target="_blank">
+        Go to artist page!
+      </a>
+        
+    </p>
+  </div>
+  <div class="col-4 text-right">
+    <button  routerLink="/home" class="btn btn-outline-danger">Back</button>
+
+  </div>
+</div>
