--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -18,3 +18,30 @@
 
   </div>
 </div>
+<div class="row m-5">
+  <div class="col">
+    <table class="table">
+      <thead>
+          <tr>
+              <th>Photo</th>
+              <th>Album</th>
+              <th>Song</th>
+              <th>Preview</th>
+            </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let topTrack of topTracks">
+          <td>
+            <img [src]="topTrack.album.images | noimage" class="img-thumb">
+          </td>
+          <td>{{topTrack.album.name}}</td>
+          <td>{{topTrack.name}}</td>
+          <td>
+            <audio [src]="topTrack.preview_url" controls></audio>
+          </td>
+        </tr>
+      </tbody>
+
+    </table>
+  </div>
+</div>
