--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,4 +18,10 @@
   </div>
 </div> -->
 <app-loading *ngIf="loading"></app-loading>
+<div *ngIf="error" class="alert alert-danger animated fadeIn m-5">
+  <h3>Error</h3>
+  <p>
+  {{mensajeError}}
+  </p>
+</div>
 <app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
